# platform.core.uifw.e-mod-tizen-effect

./: Makefile.am  configure.ac
data/: Makefile.am  effect.edc
data/group/: fade.edc  keyboard.edc  no_effect.edc
packaging/: e-mod-tizen-effect.spec
src/: Makefile.am  e_mod_effect.c  e_mod_effect.h  e_mod_effect_rotation.c  e_mod_effect_rotation.h  e_mod_main.c  e_mod_main.h
